force-app/main/default/objects/vlocity_ps__FlowStepFields__c/fields/vlocity_ps__FieldName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__FieldName__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>