force-app/main/default/objects/vlocity_ps__FlowStepFields__c/fields/vlocity_ps__FieldType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__FieldType__c</fullName>
    <label>Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>