force-app/main/default/objects/vlocity_ps__FlowStepFields__c/fields/vlocity_ps__JSONObjectName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__JSONObjectName__c</fullName>
    <label>JSON Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>